--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="modal">
 
     <form id="modal-content" action="#">
-      <button type="button" class="close" aria-label="close modal">&times;</button>
+      <button type="button" class="close" aria-label="close content">&times;</button>
       <h2>Add New Book</h2>
 
       <input type="text" class="book-info" id="title" placeholder="Title">
