Rename variables and modify close function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <main>
     <button id="open-modal">Add New Book</button>
-    <div id="outer-library"></div>
+    <div id="library"></div>
 
   </main>
   
