--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <main>
-    <button id="open-modal">Add New Book</button>
+    <button id="add-book">Add New Book</button>
     <div id="library"></div>
 
   </main>
@@ -25,9 +25,9 @@
 
   <div id="modal">
 
-    <form id="modal-content" action="#">
-      <button type="button" class="close" id="close-modal" aria-label="close content">&times;</button>
-      <h2>Add New Book</h2>
+    <form id="modal-form" action="#">
+      <button type="button" class="close-btn" id="close-modal" aria-label="close content">&times;</button>
+      <h2>New Book</h2>
 
       <input type="text" class="book-info" id="title" placeholder="Title">
       <input type="text" class="book-info" id="author" placeholder="Author">
@@ -36,7 +36,7 @@
       <label for="read">Have you read it?</label>
       <input type="checkbox" id="read">
 
-      <button type="submit" id="submit">Submit</button>
+      <button type="submit" id="submit-btn">Submit</button>
     </form>
 
   </div>
