Clean up/comment main.js, remove require tag from input in index file due to error, play with styles

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <button type="button" class="close-btn" id="close-modal" aria-label="close content">&times;</button>
       <h2>Add New Book</h2>
 
-      <input type="text" name="title" id="title" class="book-info" placeholder="Title" required>
+      <input type="text" name="title" id="title" class="book-info" placeholder="Title">
 
-      <input type="text" name="author" id="author" class="book-info" placeholder="Author" required>
+      <input type="text" name="author" id="author" class="book-info" placeholder="Author">
 
       <input type="number" class="book-info" id="pages" placeholder="Book Length">
 
