Change modal submit btn type from submit to button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <label for="read">Have you read it?</label>
       <input type="checkbox" id="read">
 
-      <button type="submit" id="submit-btn">Submit</button>
+      <!-- Button type="submit" throws "not found" error
+      Change button type from submit to button; not submitting form data to a server -->
+      <button type="button" id="submit-btn">Submit</button>
     </form>
 
   </div>
