--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <input type="checkbox" id="read">
 
       <!-- Button type="submit" throws "not found" error
-      Change button type from submit to button; not submitting form data to a server -->
+      Change button type from "submit" to "button"; as not submitting form data to a server -->
       <button type="button" id="submit-btn">Submit</button>
     </form>
 
