Style page background

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <button type="button" class="close-btn" id="close-modal" aria-label="close content">&times;</button>
       <h2>Add New Book</h2>
 
+      <!-- Removed required attribute here because field is hidden, throwing a "not focusable" error
+      Check for input through JS -->
       <input type="text" name="title" id="title" class="book-info" placeholder="Title">
 
       <input type="text" name="author" id="author" class="book-info" placeholder="Author">
